--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -998,6 +998,122 @@
             }
         }
     },
+    "playlist": {
+        "error-playlist-creation-title": "Error creating playlist",
+        "error-playlist-creation-desc": "An error occurred while creating the playlist.",
+        "playlist-created-title": "Playlist created",
+        "playlist-created-desc": "The playlist has been successfully created. You can now sync its maps!",
+        "download-playlist": "Download playlist",
+        "synchronize-playlist": "Synchronize playlist",
+        "synchronize-maps": "Synchronize maps",
+        "error-playlists-synchronization-title": "Error synchronizing playlists",
+        "error-playlists-synchronization-desc": "An error occurred while synchronizing playlists.",
+        "playlists-synchronized-title": "Playlists synchronized!",
+        "playlists-synchronized-desc": "Playlists and their maps have been downloaded.",
+        "playlists-export-error-title": "Error exporting playlists",
+        "playlists-export-error-desc": "An error occurred while exporting playlists.",
+        "playlists-exported-title": "Playlists exported!",
+        "playlists-exported-desc": "Playlists have been successfully exported.",
+        "playlists-with-maps-exported-desc": "Playlists and their maps have been successfully exported.",
+        "playlist-delete-error-title": "Error deleting playlist",
+        "playlist-delete-error-desc": "An error occurred while deleting the playlist.",
+        "playlists-deleted-title": "Playlists deleted!",
+        "playlists-deleted-desc": "Playlists have been successfully deleted.",
+        "edit-playlist": "Edit playlist",
+        "playlist-edit-error-title": "Error editing playlist",
+        "playlist-edit-error-desc": "An error occurred while editing the playlist.",
+        "playlist-edited-title": "Playlist edited!",
+        "playlist-edited-desc": "The playlist has been successfully modified. You can now sync its maps!",
+        "playlists-loading": "Loading playlists...",
+        "no-playlists": "No playlists",
+        "download-playlists": "Download playlists",
+        "created-by": "Created by",
+        "stop-download": "Stop download",
+        "cancel-download": "Cancel download",
+        "open-file": "Open file",
+        "link-playlists": "Link playlists",
+        "link-playlist-desc": "Linking playlists allows sharing playlists between all versions. Once linked, this version will benefit from shared playlists",
+        "link-playlist-info": "Adding and deleting playlists will also be shared",
+        "keep-playlists": "Keep playlists",
+        "keep-playlists-tip": "Keeping playlists will move the playlists from the current version to the shared playlists folder. Otherwise, they will be lost",
+        "unlink-playlists": "Unlink playlists",
+        "unlink-playlist-desc": "Warning, unlinking playlists will no longer allow the use of shared playlists for this version.",
+        "unlink-keep-playlists-tip": "Keeping playlists will create a copy of shared playlists for the current version. Otherwise, no playlists will be kept for this version.",
+        "delete-playlist-ask": "Delete playlist?",
+        "delete-playlists-ask": "Delete playlists?",
+        "delete-playlist-desc": "Are you sure you want to delete the playlist \"{playlistTitle}\"?",
+        "delete-playlists-desc": "Are you sure you want to delete {nb} playlists?",
+        "delete-maps": "Delete maps",
+        "delete-playlist-maps-tip": "If enabled, all maps in the playlist will be deleted",
+        "delete-playlists-maps-tip": "If enabled, all maps in the playlists will be deleted",
+        "export-playlist-ask": "Export playlist?",
+        "export-playlists-ask": "Export playlists?",
+        "export-playlist-desc": "Are you sure you want to export the playlist \"{playlistTitle}\"?",
+        "export-playlists-desc": "Are you sure you want to export {nb} playlists?",
+        "export-maps": "Export maps",
+        "export-playlist-maps-tip": "If enabled, all maps in the playlist will also be exported",
+        "export-playlists-maps-tip": "If enabled, all maps in the playlists will also be exported",
+        "export": "Export",
+        "need-clone-title": "Warning",
+        "need-clone-desc-1": "This playlist has been downloaded from an external site and contains a synchronization link.",
+        "need-clone-desc-2": "To avoid losing your changes during synchronization, the playlist will be duplicated and its synchronization link removed.",
+        "need-clone-desc-3": "You can then, if you wish, delete the original playlist.",
+        "understood": "I understand",
+        "synchronize-playlist-ask": "Synchronize playlist?",
+        "synchronize-playlists-ask": "Synchronize playlists?",
+        "synchronize-playlist-desc": "Are you sure you want to synchronize the playlist \"{playlistTitle}\"?",
+        "synchronize-playlists-desc": "Are you sure you want to synchronize {nb} playlists?",
+        "synchronize-playlist-tip": "This action updates playlists and downloads missing maps; it may take several minutes.",
+        "synchronize": "Synchronize",
+        "curated": "Recommended",
+        "verified-mapper": "Verified mapper",
+        "empty-playlists": "Empty playlists",
+        "search-playlist": "Search for a playlist",
+        "no-playlists-found": "No playlists found",
+        "error-occur-while-loading-playlists": "An error occurred while loading playlists",
+        "error-occur-while-loading-playlist": "An error occurred while loading the playlist",
+        "loading-maps": "Loading maps...",
+        "no-maps-found-for-playlist": "No maps found for this playlist",
+        "playlist-contain-no-maps": "The playlist contains no maps",
+        "no-map-installed-for-playlist": "No maps installed for this playlist",
+        "playlist-is-waiting-to-download": "The playlist is waiting to download",
+        "download-maps": "Download maps",
+        "download-missing-maps": "Download missing maps",
+        "playlist-is-downloading": "The playlist is downloading",
+        "some-playlist-maps-are-missing": "Some maps in this playlist are missing",
+        "create-a-playlist": "Create a playlist",
+        "synchronize-playlists": "Synchronize playlists",
+        "export-playlists": "Export playlists",
+        "delete-playlists": "Delete playlists",
+        "choose-image": "Choose an image",
+        "title": "Title",
+        "playlist-title": "Playlist title",
+        "description": "Description",
+        "playlist-description": "Playlist description",
+        "author": "Author",
+        "playlist-author": "Playlist author",
+        "save": "Save",
+        "loading": "Loading...",
+        "installed": "Installed",
+        "no-map-found": "No map found",
+        "edit-playlist-shortcuts": "Hold Shift or Ctrl to select multiple maps",
+        "add-to-playlist": "Add to playlist",
+        "remove-from-playlist": "Remove from playlist",
+        "playlist-is-empty": "The playlist is empty",
+        "continue": "Continue",
+        "nb-maps": "Number of maps",
+        "nb-mappers": "Number of mappers",
+        "duration": "Duration",
+        "nps": "Notes per second",
+        "date-picker": {
+            "start-date-end-date": "Start date — End date",
+            "all": "All",
+            "last-24h": "Last 24h",
+            "last-week": "Last week",
+            "last-month": "Last month",
+            "3-last-month": "Last 3 months"
+        }
+    },
     "dateformat": {
         "dayNames": ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
         "monthNames": ["Jan", "Feb", "Mar", "Apr", "May", "June", "Jul", "Aug", "Sept", "Oct", "Nov", "Dec", "January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"],
