--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -998,6 +998,122 @@
             }
         }
     },
+    "playlist": {
+        "error-playlist-creation-title": "Error al crear la lista de reproducción",
+        "error-playlist-creation-desc": "Ocurrió un error al crear la lista de reproducción.",
+        "playlist-created-title": "Lista de reproducción creada",
+        "playlist-created-desc": "La lista de reproducción se ha creado con éxito. ¡Ahora puedes sincronizar sus mapas!",
+        "download-playlist": "Descargar lista de reproducción",
+        "synchronize-playlist": "Sincronizar lista de reproducción",
+        "synchronize-maps": "Sincronizar mapas",
+        "error-playlists-synchronization-title": "Error al sincronizar listas de reproducción",
+        "error-playlists-synchronization-desc": "Ocurrió un error al sincronizar las listas de reproducción.",
+        "playlists-synchronized-title": "¡Listas de reproducción sincronizadas!",
+        "playlists-synchronized-desc": "Las listas de reproducción y sus mapas han sido descargados.",
+        "playlists-export-error-title": "Error al exportar listas de reproducción",
+        "playlists-export-error-desc": "Ocurrió un error al exportar las listas de reproducción.",
+        "playlists-exported-title": "¡Listas de reproducción exportadas!",
+        "playlists-exported-desc": "Las listas de reproducción se han exportado con éxito.",
+        "playlists-with-maps-exported-desc": "Las listas de reproducción y sus mapas se han exportado con éxito.",
+        "playlist-delete-error-title": "Error al eliminar la lista de reproducción",
+        "playlist-delete-error-desc": "Ocurrió un error al eliminar la lista de reproducción.",
+        "playlists-deleted-title": "¡Listas de reproducción eliminadas!",
+        "playlists-deleted-desc": "Las listas de reproducción se han eliminado con éxito.",
+        "edit-playlist": "Editar lista de reproducción",
+        "playlist-edit-error-title": "Error al editar la lista de reproducción",
+        "playlist-edit-error-desc": "Ocurrió un error al editar la lista de reproducción.",
+        "playlist-edited-title": "¡Lista de reproducción editada!",
+        "playlist-edited-desc": "La lista de reproducción se ha modificado con éxito. ¡Ahora puedes sincronizar sus mapas!",
+        "playlists-loading": "Cargando listas de reproducción...",
+        "no-playlists": "No hay listas de reproducción",
+        "download-playlists": "Descargar listas de reproducción",
+        "created-by": "Creado por",
+        "stop-download": "Detener descarga",
+        "cancel-download": "Cancelar descarga",
+        "open-file": "Abrir archivo",
+        "link-playlists": "Vincular listas de reproducción",
+        "link-playlist-desc": "Vincular listas de reproducción permite compartirlas entre todas las versiones. Una vez vinculada, esta versión se beneficiará de las listas de reproducción compartidas",
+        "link-playlist-info": "Añadir y eliminar listas de reproducción también se compartirá",
+        "keep-playlists": "Mantener listas de reproducción",
+        "keep-playlists-tip": "Mantener las listas de reproducción moverá las listas de la versión actual a la carpeta de listas compartidas. De lo contrario, se perderán",
+        "unlink-playlists": "Desvincular listas de reproducción",
+        "unlink-playlist-desc": "Advertencia, desvincular las listas de reproducción ya no permitirá el uso de listas compartidas para esta versión.",
+        "unlink-keep-playlists-tip": "Mantener las listas de reproducción creará una copia de las listas compartidas para la versión actual. De lo contrario, no se mantendrán listas para esta versión.",
+        "delete-playlist-ask": "¿Eliminar lista de reproducción?",
+        "delete-playlists-ask": "¿Eliminar listas de reproducción?",
+        "delete-playlist-desc": "¿Estás seguro de que quieres eliminar la lista de reproducción \"{playlistTitle}\"?",
+        "delete-playlists-desc": "¿Estás seguro de que quieres eliminar {nb} listas de reproducción?",
+        "delete-maps": "Eliminar mapas",
+        "delete-playlist-maps-tip": "Si está activado, se eliminarán todos los mapas de la lista de reproducción",
+        "delete-playlists-maps-tip": "Si está activado, se eliminarán todos los mapas de las listas de reproducción",
+        "export-playlist-ask": "¿Exportar lista de reproducción?",
+        "export-playlists-ask": "¿Exportar listas de reproducción?",
+        "export-playlist-desc": "¿Estás seguro de que quieres exportar la lista de reproducción \"{playlistTitle}\"?",
+        "export-playlists-desc": "¿Estás seguro de que quieres exportar {nb} listas de reproducción?",
+        "export-maps": "Exportar mapas",
+        "export-playlist-maps-tip": "Si está activado, también se exportarán todos los mapas de la lista de reproducción",
+        "export-playlists-maps-tip": "Si está activado, también se exportarán todos los mapas de las listas de reproducción",
+        "export": "Exportar",
+        "need-clone-title": "Advertencia",
+        "need-clone-desc-1": "Esta lista de reproducción se ha descargado de un sitio externo y contiene un enlace de sincronización.",
+        "need-clone-desc-2": "Para evitar perder tus cambios durante la sincronización, la lista de reproducción se duplicará y se eliminará su enlace de sincronización.",
+        "need-clone-desc-3": "Luego puedes, si lo deseas, eliminar la lista de reproducción original.",
+        "understood": "Entendido",
+        "synchronize-playlist-ask": "¿Sincronizar lista de reproducción?",
+        "synchronize-playlists-ask": "¿Sincronizar listas de reproducción?",
+        "synchronize-playlist-desc": "¿Estás seguro de que quieres sincronizar la lista de reproducción \"{playlistTitle}\"?",
+        "synchronize-playlists-desc": "¿Estás seguro de que quieres sincronizar {nb} listas de reproducción?",
+        "synchronize-playlist-tip": "Esta acción actualiza las listas de reproducción y descarga los mapas faltantes; puede tardar varios minutos.",
+        "synchronize": "Sincronizar",
+        "curated": "Recomendado",
+        "verified-mapper": "Mapeador verificado",
+        "empty-playlists": "Listas de reproducción vacías",
+        "search-playlist": "Buscar una lista de reproducción",
+        "no-playlists-found": "No se encontraron listas de reproducción",
+        "error-occur-while-loading-playlists": "Ocurrió un error al cargar las listas de reproducción",
+        "error-occur-while-loading-playlist": "Ocurrió un error al cargar la lista de reproducción",
+        "loading-maps": "Cargando mapas...",
+        "no-maps-found-for-playlist": "No se encontraron mapas para esta lista de reproducción",
+        "playlist-contain-no-maps": "La lista de reproducción no contiene mapas",
+        "no-map-installed-for-playlist": "No hay mapas instalados para esta lista de reproducción",
+        "playlist-is-waiting-to-download": "La lista de reproducción está esperando para descargar",
+        "download-maps": "Descargar mapas",
+        "download-missing-maps": "Descargar mapas faltantes",
+        "playlist-is-downloading": "La lista de reproducción se está descargando",
+        "some-playlist-maps-are-missing": "Faltan algunos mapas en esta lista de reproducción",
+        "create-a-playlist": "Crear una lista de reproducción",
+        "synchronize-playlists": "Sincronizar listas de reproducción",
+        "export-playlists": "Exportar listas de reproducción",
+        "delete-playlists": "Eliminar listas de reproducción",
+        "choose-image": "Elegir una imagen",
+        "title": "Título",
+        "playlist-title": "Título de la lista de reproducción",
+        "description": "Descripción",
+        "playlist-description": "Descripción de la lista de reproducción",
+        "author": "Autor",
+        "playlist-author": "Autor de la lista de reproducción",
+        "save": "Guardar",
+        "loading": "Cargando...",
+        "installed": "Instalado",
+        "no-map-found": "No se encontró ningún mapa",
+        "edit-playlist-shortcuts": "Mantén presionado Shift o Ctrl para seleccionar múltiples mapas",
+        "add-to-playlist": "Añadir a la lista de reproducción",
+        "remove-from-playlist": "Quitar de la lista de reproducción",
+        "playlist-is-empty": "La lista de reproducción está vacía",
+        "continue": "Continuar",
+        "nb-maps": "Número de mapas",
+        "nb-mappers": "Número de mapeadores",
+        "duration": "Duración",
+        "nps": "Notas por segundo",
+        "date-picker": {
+            "start-date-end-date": "Fecha de inicio — Fecha de fin",
+            "all": "Todo",
+            "last-24h": "Últimas 24h",
+            "last-week": "Última semana",
+            "last-month": "Último mes",
+            "3-last-month": "Últimos 3 meses"
+        }
+    },
     "dateformat": {
         "dayNames": ["Dom", "Lun", "Mar", "Mié", "Jue", "Vie", "Sáb", "Domingo", "Lunes", "Martes", "Miércoles", "Jueves", "Viernes", "Sábado"],
         "monthNames": ["Ene", "Feb", "Mar", "Abr", "May", "Jun", "Jul", "Ago", "Sep", "Oct", "Nov", "Dic", "Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre"],
