--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -806,7 +806,8 @@
             "bsr-code" : "Code BSR",
             "download" : "Télécharger la carte",
             "downloading" :"Téléchargement de la carte",
-            "cancel-download" : "Annuler le téléchargement"
+            "cancel-download" : "Annuler le téléchargement",
+            "hightlight-difficulty" : "Surligner la difficulté"
         }
     },
     "models": {
@@ -996,6 +997,122 @@
                 "STEAM_LAUNCHED": "Steam lancé avec succès !",
                 "UNABLE_TO_LAUNCH_STEAM": "Impossible de lancer Steam, lancement forcé de Beat Saber..."
             }
+        }
+    },
+    "playlist": {
+        "error-playlist-creation-title": "Erreur lors de la création de la playlist",
+        "error-playlist-creation-desc": "Une erreur est survenue lors de la création de la playlist.",
+        "playlist-created-title": "Playlist créée",
+        "playlist-created-desc": "La playlist a été créée avec succès. Tu peut maintenant synchroniser ses maps !",
+        "download-playlist": "Télécharger la playlist",
+        "synchronize-playlist": "Synchroniser la playlist",
+        "synchronize-maps": "Synchroniser les maps",
+        "error-playlists-synchronization-title": "Erreur lors de la synchronisation des playlists",
+        "error-playlists-synchronization-desc": "Une erreur est survenue lors de la synchronisation des playlists.",
+        "playlists-synchronized-title": "Playlists synchronisées !",
+        "playlists-synchronized-desc": "Les playlists et leurs maps ont été téléchargées.",
+        "playlists-export-error-title": "Erreur lors de l'exportation des playlists",
+        "playlists-export-error-desc": "Une erreur est survenue lors de l'exportation des playlists.",
+        "playlists-exported-title": "Playlists exportées !",
+        "playlists-exported-desc": "Les playlists ont été exportées avec succès.",
+        "playlists-with-maps-exported-desc": "Les playlists et leurs maps ont été exportées avec succès.",
+        "playlist-delete-error-title": "Erreur lors de la suppression de la playlist",
+        "playlist-delete-error-desc": "Une erreur est survenue lors de la suppression de la playlist.",
+        "playlists-deleted-title": "Playlists supprimées !",
+        "playlists-deleted-desc": "Les playlists ont été supprimées avec succès.",
+        "edit-playlist": "Éditer la playlist",
+        "playlist-edit-error-title": "Erreur lors de l'édition de la playlist",
+        "playlist-edit-error-desc": "Une erreur est survenue lors de l'édition de la playlist.",
+        "playlist-edited-title": "Playlist éditée !",
+        "playlist-edited-desc": "La playlist a été modifiée avec succès. Tu peut maintenant synchroniser ses maps !",
+        "playlists-loading": "Chargement des playlist...",
+        "no-playlists": "Aucune playlist",
+        "download-playlists": "Télécharger des playlists",
+        "created-by": "Créée par",
+        "stop-download": "Arrêter le téléchargement",
+        "cancel-download": "Annuler le téléchargement",
+        "open-file": "Ouvrir le fichier",
+        "link-playlists": "Lier les playlists",
+        "link-playlist-desc": "La liaison des playlists permet de partager les playlists entre toute les version. Une fois liée, cette version profitera des playlists partagées",
+        "link-playlist-info": "L'ajout et la suppression de playlists sera également partagé",
+        "keep-playlists": "Conserver les playlists",
+        "keep-playlists-tip": "Conserver les playlists déplacera les playlists de la version actuelle dans le dossier des playlists partagées. Dans le cas contraire elles seront perdues",
+        "unlink-playlists": "Délier les playlists",
+        "unlink-playlist-desc": "Attention, délier les playlists ne permettra plus l'utilisation des playlists paratagées pour cette version.",
+        "unlink-keep-playlists-tip": "Conserver les playlists créera une copie des playlists partagées pour la version actuelle. Dans le cas contraire, aucune playlist ne sera conservée pour cette version.",
+        "delete-playlist-ask": "Supprimer la playlist ?",
+        "delete-playlists-ask": "Supprimer les playlists ?",
+        "delete-playlist-desc": "Es-tu sur de vouloir supprimer la playlist \"{playlistTitle}\" ?",
+        "delete-playlists-desc": "Es-tu sur de vouloir supprimer {nb} playlists ?",
+        "delete-maps": "Supprimer les maps",
+        "delete-playlist-maps-tip": "Si activé, toutes les maps de la playlist seront supprimées",
+        "delete-playlists-maps-tip": "Si activé, toutes les maps des playlists seront supprimées",
+        "export-playlist-ask": "Exporter la playlist ?",
+        "export-playlists-ask": "Exporter les playlists ?",
+        "export-playlist-desc": "Es-tu sur de vouloir exporter la playlist \"{playlistTitle}\" ?",
+        "export-playlists-desc": "Es-tu sur de vouloir exporter les {nb} playlists ?",
+        "export-maps": "Exporter les maps",
+        "export-playlist-maps-tip": "Si activé, toutes les maps de la playlist seront également exportées",
+        "export-playlists-maps-tip": "Si activé, toutes les maps des playlists seront également exportées",
+        "export": "Exporter",
+        "need-clone-title": "Attention",
+        "need-clone-desc-1": "Cette playlist a été téléchargée depuis un site externe et contient un lien de synchronisation.",
+        "need-clone-desc-2": "Pour éviter de perdre vos modifications lors d'une synchronisation, la playlist va être dupliquée et son lien de synchronisation supprimé.",
+        "need-clone-desc-3": "Vous pourrez ensuite, si vous le souhaitez, supprimer la playlist originale.",
+        "understood": "J'ai compris",
+        "synchronize-playlist-ask": "Synchroniser la playlist ?",
+        "synchronize-playlists-ask": "Synchroniser les playlists ?",
+        "synchronize-playlist-desc": "Es-tu sur de vouloir synchroniser la playlist \"{playlistTitle}\" ?",
+        "synchronize-playlists-desc": "Es-tu sur de vouloir synchroniser les {nb} playlists ?",
+        "synchronize-playlist-tip": "Cette action met à jour les playlists et télécharge les maps manquantes; cela peut durer plusieurs minutes.",
+        "synchronize": "Synchroniser",
+        "curated": "Recommandée",
+        "verified-mapper": "Mapper vérifié",
+        "empty-playlists": "Playlists vides",
+        "search-playlist": "Rechercher une playlist",
+        "no-playlists-found": "Aucune playlists trouvées",
+        "error-occur-while-loading-playlists": "Une erreur est survenue lors du chargement des playlists",
+        "error-occur-while-loading-playlist": "Une erreur est survenue lors du chargement de la playlist",
+        "loading-maps":"Chargement des maps...",
+        "no-maps-found-for-playlist":"Aucune map trouvée pour cette playlist",
+        "playlist-contain-no-maps":"La playlist ne contient aucune map",
+        "no-map-installed-for-playlist":"Aucune map installée pour cette playlist",
+        "playlist-is-waiting-to-download":"La playlist est en attente de téléchargment",
+        "download-maps": "Télécharger les maps",
+        "download-missing-maps": "Télécharger les maps manquantes",
+        "playlist-is-downloading":"La playlist est en cours de téléchargement",
+        "some-playlist-maps-are-missing":"Certaines maps de cette playlist sont manquantes",
+        "create-a-playlist": "Créer une playlist",
+        "synchronize-playlists": "Synchroniser les playlists",
+        "export-playlists": "Exporter les playlists",
+        "delete-playlists": "Supprimer les playlists",
+        "choose-image": "Choisir une image",
+        "title": "Titre",
+        "playlist-title": "Titre de la playlist",
+        "description": "Description",
+        "playlist-description": "Description de la playlist",
+        "author": "Auteur",
+        "playlist-author": "Auteur de la playlist",
+        "save": "Enregistrer",
+        "loading": "Chargement...",
+        "installed": "Installée",
+        "no-map-found": "Aucune map trouvée",
+        "edit-playlist-shortcuts": "Maintenez Maj ou Ctrl pour sélectionner plusieurs maps",
+        "add-to-playlist": "Ajouter à la playlist",
+        "remove-from-playlist": "Retirer de la playlist",
+        "playlist-is-empty": "La playlist est vide",
+        "continue": "Continuer",
+        "nb-maps": "Nombre de maps",
+        "nb-mappers": "Nombre de mappers",
+        "duration": "Durée",
+        "nps": "Notes par secondes",
+        "date-picker": {
+            "start-date-end-date": "Date début — Date fin",
+            "all": "Tout",
+            "last-24h": "Dernières 24h",
+            "last-week": "Dernière semaine",
+            "last-month": "Dernier mois",
+            "3-last-month": "3 derniers mois"
         }
     },
     "dateformat": {
