--- a/assets/jsons/translations/zh-tw.json
+++ b/assets/jsons/translations/zh-tw.json
@@ -998,6 +998,122 @@
             }
         }
     },
+    "playlist": {
+        "error-playlist-creation-title": "建立播放清單時發生錯誤",
+        "error-playlist-creation-desc": "建立播放清單時發生錯誤。",
+        "playlist-created-title": "播放清單已建立",
+        "playlist-created-desc": "播放清單已成功建立。您現在可以同步其地圖了！",
+        "download-playlist": "下載播放清單",
+        "synchronize-playlist": "同步播放清單",
+        "synchronize-maps": "同步地圖",
+        "error-playlists-synchronization-title": "同步播放清單時發生錯誤",
+        "error-playlists-synchronization-desc": "同步播放清單時發生錯誤。",
+        "playlists-synchronized-title": "播放清單已同步！",
+        "playlists-synchronized-desc": "播放清單及其地圖已下載。",
+        "playlists-export-error-title": "匯出播放清單時發生錯誤",
+        "playlists-export-error-desc": "匯出播放清單時發生錯誤。",
+        "playlists-exported-title": "播放清單已匯出！",
+        "playlists-exported-desc": "播放清單已成功匯出。",
+        "playlists-with-maps-exported-desc": "播放清單及其地圖已成功匯出。",
+        "playlist-delete-error-title": "刪除播放清單時發生錯誤",
+        "playlist-delete-error-desc": "刪除播放清單時發生錯誤。",
+        "playlists-deleted-title": "播放清單已刪除！",
+        "playlists-deleted-desc": "播放清單已成功刪除。",
+        "edit-playlist": "編輯播放清單",
+        "playlist-edit-error-title": "編輯播放清單時發生錯誤",
+        "playlist-edit-error-desc": "編輯播放清單時發生錯誤。",
+        "playlist-edited-title": "播放清單已編輯！",
+        "playlist-edited-desc": "播放清單已成功修改。您現在可以同步其地圖了！",
+        "playlists-loading": "正在載入播放清單...",
+        "no-playlists": "沒有播放清單",
+        "download-playlists": "下載播放清單",
+        "created-by": "建立者",
+        "stop-download": "停止下載",
+        "cancel-download": "取消下載",
+        "open-file": "開啟檔案",
+        "link-playlists": "連結播放清單",
+        "link-playlist-desc": "連結播放清單允許在所有版本之間共享播放清單。一旦連結，此版本將受益於共享播放清單",
+        "link-playlist-info": "新增和刪除播放清單也將被共享",
+        "keep-playlists": "保留播放清單",
+        "keep-playlists-tip": "保留播放清單將把當前版本的播放清單移動到共享播放清單資料夾。否則，它們將遺失",
+        "unlink-playlists": "取消連結播放清單",
+        "unlink-playlist-desc": "警告，取消連結播放清單將不再允許此版本使用共享播放清單。",
+        "unlink-keep-playlists-tip": "保留播放清單將為當前版本建立共享播放清單的副本。否則，此版本將不保留任何播放清單。",
+        "delete-playlist-ask": "刪除播放清單？",
+        "delete-playlists-ask": "刪除播放清單？",
+        "delete-playlist-desc": "您確定要刪除播放清單 \"{playlistTitle}\" 嗎？",
+        "delete-playlists-desc": "您確定要刪除 {nb} 個播放清單嗎？",
+        "delete-maps": "刪除地圖",
+        "delete-playlist-maps-tip": "如果啟用，播放清單中的所有地圖都將被刪除",
+        "delete-playlists-maps-tip": "如果啟用，播放清單中的所有地圖都將被刪除",
+        "export-playlist-ask": "匯出播放清單？",
+        "export-playlists-ask": "匯出播放清單？",
+        "export-playlist-desc": "您確定要匯出播放清單 \"{playlistTitle}\" 嗎？",
+        "export-playlists-desc": "您確定要匯出 {nb} 個播放清單嗎？",
+        "export-maps": "匯出地圖",
+        "export-playlist-maps-tip": "如果啟用，播放清單中的所有地圖也將被匯出",
+        "export-playlists-maps-tip": "如果啟用，播放清單中的所有地圖也將被匯出",
+        "export": "匯出",
+        "need-clone-title": "警告",
+        "need-clone-desc-1": "此播放清單已從外部網站下載，並包含同步連結。",
+        "need-clone-desc-2": "為避免在同步過程中遺失更改，播放清單將被複製，並刪除其同步連結。",
+        "need-clone-desc-3": "然後，如果您願意，可以刪除原始播放清單。",
+        "understood": "我明白了",
+        "synchronize-playlist-ask": "同步播放清單？",
+        "synchronize-playlists-ask": "同步播放清單？",
+        "synchronize-playlist-desc": "您確定要同步播放清單 \"{playlistTitle}\" 嗎？",
+        "synchronize-playlists-desc": "您確定要同步 {nb} 個播放清單嗎？",
+        "synchronize-playlist-tip": "此操作更新播放清單並下載缺失的地圖；可能需要幾分鐘。",
+        "synchronize": "同步",
+        "curated": "精選",
+        "verified-mapper": "已驗證的製圖者",
+        "empty-playlists": "空播放清單",
+        "search-playlist": "搜尋播放清單",
+        "no-playlists-found": "未找到播放清單",
+        "error-occur-while-loading-playlists": "載入播放清單時發生錯誤",
+        "error-occur-while-loading-playlist": "載入播放清單時發生錯誤",
+        "loading-maps": "正在載入地圖...",
+        "no-maps-found-for-playlist": "未找到此播放清單的地圖",
+        "playlist-contain-no-maps": "播放清單不包含地圖",
+        "no-map-installed-for-playlist": "此播放清單沒有已安裝的地圖",
+        "playlist-is-waiting-to-download": "播放清單正在等待下載",
+        "download-maps": "下載地圖",
+        "download-missing-maps": "下載缺失的地圖",
+        "playlist-is-downloading": "播放清單正在下載",
+        "some-playlist-maps-are-missing": "此播放清單中的一些地圖缺失",
+        "create-a-playlist": "建立播放清單",
+        "synchronize-playlists": "同步播放清單",
+        "export-playlists": "匯出播放清單",
+        "delete-playlists": "刪除播放清單",
+        "choose-image": "選擇圖片",
+        "title": "標題",
+        "playlist-title": "播放清單標題",
+        "description": "描述",
+        "playlist-description": "播放清單描述",
+        "author": "作者",
+        "playlist-author": "播放清單作者",
+        "save": "儲存",
+        "loading": "載入中...",
+        "installed": "已安裝",
+        "no-map-found": "未找到地圖",
+        "edit-playlist-shortcuts": "按住 Shift 或 Ctrl 選擇多個地圖",
+        "add-to-playlist": "新增到播放清單",
+        "remove-from-playlist": "從播放清單中移除",
+        "playlist-is-empty": "播放清單為空",
+        "continue": "繼續",
+        "nb-maps": "地圖數量",
+        "nb-mappers": "製圖者數量",
+        "duration": "持續時間",
+        "nps": "每秒音符數",
+        "date-picker": {
+            "start-date-end-date": "開始日期 — 結束日期",
+            "all": "全部",
+            "last-24h": "最近24小時",
+            "last-week": "上週",
+            "last-month": "上個月",
+            "3-last-month": "最近3個月"
+        }
+    },
     "dateformat": {
         "dayNames": ["週日", "週一", "週二", "週三", "週四", "週五", "週六", "星期日", "星期一", "星期二", "星期三", "星期四", "星期五", "星期六"],
         "monthNames": ["1 月", "2 月", "3 月", "4 月", "5 月", "6 月", "7 月", "8 月", "9 月", "10 月", "11 月", "12 月", "一月", "二月", "三月", "四月", "五月", "六月", "七月", "八月", "九月", "十月", "十一月", "十二月"],
