--- a/assets/jsons/translations/zh.json
+++ b/assets/jsons/translations/zh.json
@@ -998,6 +998,122 @@
             }
         }
     },
+    "playlist": {
+        "error-playlist-creation-title": "创建播放列表时出错",
+        "error-playlist-creation-desc": "创建播放列表时发生错误。",
+        "playlist-created-title": "播放列表已创建",
+        "playlist-created-desc": "播放列表已成功创建。您现在可以同步其地图了！",
+        "download-playlist": "下载播放列表",
+        "synchronize-playlist": "同步播放列表",
+        "synchronize-maps": "同步地图",
+        "error-playlists-synchronization-title": "同步播放列表时出错",
+        "error-playlists-synchronization-desc": "同步播放列表时发生错误。",
+        "playlists-synchronized-title": "播放列表已同步！",
+        "playlists-synchronized-desc": "播放列表及其地图已下载。",
+        "playlists-export-error-title": "导出播放列表时出错",
+        "playlists-export-error-desc": "导出播放列表时发生错误。",
+        "playlists-exported-title": "播放列表已导出！",
+        "playlists-exported-desc": "播放列表已成功导出。",
+        "playlists-with-maps-exported-desc": "播放列表及其地图已成功导出。",
+        "playlist-delete-error-title": "删除播放列表时出错",
+        "playlist-delete-error-desc": "删除播放列表时发生错误。",
+        "playlists-deleted-title": "播放列表已删除！",
+        "playlists-deleted-desc": "播放列表已成功删除。",
+        "edit-playlist": "编辑播放列表",
+        "playlist-edit-error-title": "编辑播放列表时出错",
+        "playlist-edit-error-desc": "编辑播放列表时发生错误。",
+        "playlist-edited-title": "播放列表已编辑！",
+        "playlist-edited-desc": "播放列表已成功修改。您现在可以同步其地图了！",
+        "playlists-loading": "正在加载播放列表...",
+        "no-playlists": "没有播放列表",
+        "download-playlists": "下载播放列表",
+        "created-by": "创建者",
+        "stop-download": "停止下载",
+        "cancel-download": "取消下载",
+        "open-file": "打开文件",
+        "link-playlists": "链接播放列表",
+        "link-playlist-desc": "链接播放列表允许在所有版本之间共享播放列表。一旦链接，此版本将受益于共享播放列表",
+        "link-playlist-info": "添加和删除播放列表也将被共享",
+        "keep-playlists": "保留播放列表",
+        "keep-playlists-tip": "保留播放列表将把当前版本的播放列表移动到共享播放列表文件夹。否则，它们将丢失",
+        "unlink-playlists": "取消链接播放列表",
+        "unlink-playlist-desc": "警告，取消链接播放列表将不再允许此版本使用共享播放列表。",
+        "unlink-keep-playlists-tip": "保留播放列表将为当前版本创建共享播放列表的副本。否则，此版本将不保留任何播放列表。",
+        "delete-playlist-ask": "删除播放列表？",
+        "delete-playlists-ask": "删除播放列表？",
+        "delete-playlist-desc": "您确定要删除播放列表 \"{playlistTitle}\" 吗？",
+        "delete-playlists-desc": "您确定要删除 {nb} 个播放列表吗？",
+        "delete-maps": "删除地图",
+        "delete-playlist-maps-tip": "如果启用，播放列表中的所有地图都将被删除",
+        "delete-playlists-maps-tip": "如果启用，播放列表中的所有地图都将被删除",
+        "export-playlist-ask": "导出播放列表？",
+        "export-playlists-ask": "导出播放列表？",
+        "export-playlist-desc": "您确定要导出播放列表 \"{playlistTitle}\" 吗？",
+        "export-playlists-desc": "您确定要导出 {nb} 个播放列表吗？",
+        "export-maps": "导出地图",
+        "export-playlist-maps-tip": "如果启用，播放列表中的所有地图也将被导出",
+        "export-playlists-maps-tip": "如果启用，播放列表中的所有地图也将被导出",
+        "export": "导出",
+        "need-clone-title": "警告",
+        "need-clone-desc-1": "此播放列表已从外部站点下载，并包含同步链接。",
+        "need-clone-desc-2": "为避免在同步过程中丢失更改，播放列表将被复制，并删除其同步链接。",
+        "need-clone-desc-3": "然后，如果您愿意，可以删除原始播放列表。",
+        "understood": "我明白了",
+        "synchronize-playlist-ask": "同步播放列表？",
+        "synchronize-playlists-ask": "同步播放列表？",
+        "synchronize-playlist-desc": "您确定要同步播放列表 \"{playlistTitle}\" 吗？",
+        "synchronize-playlists-desc": "您确定要同步 {nb} 个播放列表吗？",
+        "synchronize-playlist-tip": "此操作更新播放列表并下载缺失的地图；可能需要几分钟。",
+        "synchronize": "同步",
+        "curated": "推荐",
+        "verified-mapper": "已验证的制图者",
+        "empty-playlists": "空播放列表",
+        "search-playlist": "搜索播放列表",
+        "no-playlists-found": "未找到播放列表",
+        "error-occur-while-loading-playlists": "加载播放列表时发生错误",
+        "error-occur-while-loading-playlist": "加载播放列表时发生错误",
+        "loading-maps": "正在加载地图...",
+        "no-maps-found-for-playlist": "未找到此播放列表的地图",
+        "playlist-contain-no-maps": "播放列表不包含地图",
+        "no-map-installed-for-playlist": "此播放列表没有已安装的地图",
+        "playlist-is-waiting-to-download": "播放列表正在等待下载",
+        "download-maps": "下载地图",
+        "download-missing-maps": "下载缺失的地图",
+        "playlist-is-downloading": "播放列表正在下载",
+        "some-playlist-maps-are-missing": "此播放列表中的一些地图缺失",
+        "create-a-playlist": "创建播放列表",
+        "synchronize-playlists": "同步播放列表",
+        "export-playlists": "导出播放列表",
+        "delete-playlists": "删除播放列表",
+        "choose-image": "选择图片",
+        "title": "标题",
+        "playlist-title": "播放列表标题",
+        "description": "描述",
+        "playlist-description": "播放列表描述",
+        "author": "作者",
+        "playlist-author": "播放列表作者",
+        "save": "保存",
+        "loading": "加载中...",
+        "installed": "已安装",
+        "no-map-found": "未找到地图",
+        "edit-playlist-shortcuts": "按住 Shift 或 Ctrl 选择多个地图",
+        "add-to-playlist": "添加到播放列表",
+        "remove-from-playlist": "从播放列表中移除",
+        "playlist-is-empty": "播放列表为空",
+        "continue": "继续",
+        "nb-maps": "地图数量",
+        "nb-mappers": "制图者数量",
+        "duration": "持续时间",
+        "nps": "每秒音符数",
+        "date-picker": {
+            "start-date-end-date": "开始日期 — 结束日期",
+            "all": "全部",
+            "last-24h": "最近24小时",
+            "last-week": "上周",
+            "last-month": "上个月",
+            "3-last-month": "最近3个月"
+        }
+    },
     "dateformat": {
         "dayNames": ["周日", "周一", "周二", "周三", "周四", "周五", "周六", "星期日", "星期一", "星期二", "星期三", "星期四", "星期五", "星期六"],
         "monthNames": ["1 月", "2 月", "3 月", "4 月", "5 月", "6 月", "7 月", "8 月", "9 月", "10 月", "11 月", "12 月", "一月", "二月", "三月", "四月", "五月", "六月", "七月", "八月", "九月", "十月", "十一月", "十二月"],
