--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -998,6 +998,122 @@
             }
         }
     },
+    "playlist": {
+        "error-playlist-creation-title": "プレイリストの作成エラー",
+        "error-playlist-creation-desc": "プレイリストの作成中にエラーが発生しました。",
+        "playlist-created-title": "プレイリストが作成されました",
+        "playlist-created-desc": "プレイリストが正常に作成されました。今すぐマップを同期できます！",
+        "download-playlist": "プレイリストをダウンロード",
+        "synchronize-playlist": "プレイリストを同期",
+        "synchronize-maps": "マップを同期",
+        "error-playlists-synchronization-title": "プレイリストの同期エラー",
+        "error-playlists-synchronization-desc": "プレイリストの同期中にエラーが発生しました。",
+        "playlists-synchronized-title": "プレイリストが同期されました！",
+        "playlists-synchronized-desc": "プレイリストとそのマップがダウンロードされました。",
+        "playlists-export-error-title": "プレイリストのエクスポートエラー",
+        "playlists-export-error-desc": "プレイリストのエクスポート中にエラーが発生しました。",
+        "playlists-exported-title": "プレイリストがエクスポートされました！",
+        "playlists-exported-desc": "プレイリストが正常にエクスポートされました。",
+        "playlists-with-maps-exported-desc": "プレイリストとそのマップが正常にエクスポートされました。",
+        "playlist-delete-error-title": "プレイリストの削除エラー",
+        "playlist-delete-error-desc": "プレイリストの削除中にエラーが発生しました。",
+        "playlists-deleted-title": "プレイリストが削除されました！",
+        "playlists-deleted-desc": "プレイリストが正常に削除されました。",
+        "edit-playlist": "プレイリストを編集",
+        "playlist-edit-error-title": "プレイリストの編集エラー",
+        "playlist-edit-error-desc": "プレイリストの編集中にエラーが発生しました。",
+        "playlist-edited-title": "プレイリストが編集されました！",
+        "playlist-edited-desc": "プレイリストが正常に変更されました。今すぐマップを同期できます！",
+        "playlists-loading": "プレイリストを読み込み中...",
+        "no-playlists": "プレイリストがありません",
+        "download-playlists": "プレイリストをダウンロード",
+        "created-by": "作成者",
+        "stop-download": "ダウンロードを停止",
+        "cancel-download": "ダウンロードをキャンセル",
+        "open-file": "ファイルを開く",
+        "link-playlists": "プレイリストをリンク",
+        "link-playlist-desc": "プレイリストをリンクすると、すべてのバージョン間でプレイリストを共有できます。リンクすると、このバージョンは共有プレイリストの恩恵を受けます",
+        "link-playlist-info": "プレイリストの追加と削除も共有されます",
+        "keep-playlists": "プレイリストを保持",
+        "keep-playlists-tip": "プレイリストを保持すると、現在のバージョンのプレイリストが共有プレイリストフォルダに移動されます。そうしない場合、それらは失われます",
+        "unlink-playlists": "プレイリストのリンクを解除",
+        "unlink-playlist-desc": "警告：プレイリストのリンクを解除すると、このバージョンでは共有プレイリストを使用できなくなります。",
+        "unlink-keep-playlists-tip": "プレイリストを保持すると、現在のバージョン用に共有プレイリストのコピーが作成されます。そうしない場合、このバージョンのプレイリストは保持されません。",
+        "delete-playlist-ask": "プレイリストを削除しますか？",
+        "delete-playlists-ask": "プレイリストを削除しますか？",
+        "delete-playlist-desc": "プレイリスト「{playlistTitle}」を削除してもよろしいですか？",
+        "delete-playlists-desc": "{nb}個のプレイリストを削除してもよろしいですか？",
+        "delete-maps": "マップを削除",
+        "delete-playlist-maps-tip": "有効にすると、プレイリスト内のすべてのマップが削除されます",
+        "delete-playlists-maps-tip": "有効にすると、プレイリスト内のすべてのマップが削除されます",
+        "export-playlist-ask": "プレイリストをエクスポートしますか？",
+        "export-playlists-ask": "プレイリストをエクスポートしますか？",
+        "export-playlist-desc": "プレイリスト「{playlistTitle}」をエクスポートしてもよろしいですか？",
+        "export-playlists-desc": "{nb}個のプレイリストをエクスポートしてもよろしいですか？",
+        "export-maps": "マップをエクスポート",
+        "export-playlist-maps-tip": "有効にすると、プレイリスト内のすべてのマップもエクスポートされます",
+        "export-playlists-maps-tip": "有効にすると、プレイリスト内のすべてのマップもエクスポートされます",
+        "export": "エクスポート",
+        "need-clone-title": "警告",
+        "need-clone-desc-1": "このプレイリストは外部サイトからダウンロードされ、同期リンクが含まれています。",
+        "need-clone-desc-2": "同期中に変更を失わないようにするため、プレイリストが複製され、同期リンクが削除されます。",
+        "need-clone-desc-3": "その後、必要に応じて元のプレイリストを削除できます。",
+        "understood": "理解しました",
+        "synchronize-playlist-ask": "プレイリストを同期しますか？",
+        "synchronize-playlists-ask": "プレイリストを同期しますか？",
+        "synchronize-playlist-desc": "プレイリスト「{playlistTitle}」を同期してもよろしいですか？",
+        "synchronize-playlists-desc": "{nb}個のプレイリストを同期してもよろしいですか？",
+        "synchronize-playlist-tip": "この操作はプレイリストを更新し、不足しているマップをダウンロードします。数分かかる場合があります。",
+        "synchronize": "同期",
+        "curated": "おすすめ",
+        "verified-mapper": "認証済みマッパー",
+        "empty-playlists": "空のプレイリスト",
+        "search-playlist": "プレイリストを検索",
+        "no-playlists-found": "プレイリストが見つかりません",
+        "error-occur-while-loading-playlists": "プレイリストの読み込み中にエラーが発生しました",
+        "error-occur-while-loading-playlist": "プレイリストの読み込み中にエラーが発生しました",
+        "loading-maps": "マップを読み込み中...",
+        "no-maps-found-for-playlist": "このプレイリストにマップが見つかりません",
+        "playlist-contain-no-maps": "プレイリストにマップが含まれていません",
+        "no-map-installed-for-playlist": "このプレイリストにインストールされたマップがありません",
+        "playlist-is-waiting-to-download": "プレイリストはダウンロード待ちです",
+        "download-maps": "マップをダウンロード",
+        "download-missing-maps": "不足しているマップをダウンロード",
+        "playlist-is-downloading": "プレイリストをダウンロード中です",
+        "some-playlist-maps-are-missing": "このプレイリストの一部のマップが不足しています",
+        "create-a-playlist": "プレイリストを作成",
+        "synchronize-playlists": "プレイリストを同期",
+        "export-playlists": "プレイリストをエクスポート",
+        "delete-playlists": "プレイリストを削除",
+        "choose-image": "画像を選択",
+        "title": "タイトル",
+        "playlist-title": "プレイリストのタイトル",
+        "description": "説明",
+        "playlist-description": "プレイリストの説明",
+        "author": "作者",
+        "playlist-author": "プレイリストの作者",
+        "save": "保存",
+        "loading": "読み込み中...",
+        "installed": "インストール済み",
+        "no-map-found": "マップが見つかりません",
+        "edit-playlist-shortcuts": "ShiftキーまたはCtrlキーを押しながら複数のマップを選択",
+        "add-to-playlist": "プレイリストに追加",
+        "remove-from-playlist": "プレイリストから削除",
+        "playlist-is-empty": "プレイリストが空です",
+        "continue": "続ける",
+        "nb-maps": "マップ数",
+        "nb-mappers": "マッパー数",
+        "duration": "継続時間",
+        "nps": "1秒あたりの音符数",
+        "date-picker": {
+            "start-date-end-date": "開始日 — 終了日",
+            "all": "すべて",
+            "last-24h": "過去24時間",
+            "last-week": "先週",
+            "last-month": "先月",
+            "3-last-month": "過去3ヶ月"
+        }
+    },
     "dateformat": {
         "dayNames": ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
         "monthNames": ["Jan", "Feb", "Mar", "Apr", "May", "June", "Jul", "Aug", "Sept", "Oct", "Nov", "Dec", "January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"],
